[package]
name = "quixote"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.0"
pest_derive="2.0"
diesel={version="1", features=["r2d2"]}